--- a/frontend/src/component/formCard/styles.css
+++ b/frontend/src/component/formCard/styles.css
@@ -5,11 +5,40 @@
     /* font-family: 'Raleway'; */
 }
 
+
+body {
+    
+    font-family: Arial, Helvetica, sans-serif;
+    background-image: linear-gradient(to right, rgb(75, 75, 75), rgb(46, 46, 46));
+    border-radius: 15px;
+}
+
+
+.box {
+    flex-direction: column;
+    color: rgb(248, 248, 248);
+    background-color: rgba(0, 0, 0, 0.6);
+    padding: 20px;
+    border-radius: 15px;
+}
+
 .inputDados {
-    background-color: rgb(58, 58, 58);
+    background: rgba(44, 44, 44, 0.315);
     border-radius: 5px;
     border: 3px solid rgb(129, 0, 0);
     margin-bottom: 38px;
+    padding: 10px;
+    padding-bottom: 5px;
+}
+
+.inputDados b {
+    margin-left: 8px;
+    letter-spacing: 2px;
+    margin-bottom: 228px;
+}
+
+.inputDados p {
+    margin-left: 8px;
 }
 
 .inputDados2 {
@@ -17,48 +46,80 @@
     border-radius: 5px;
     border: 3px solid rgb(129, 0, 0);
     margin-bottom: 38px;
-    margin-top: 35px;
+    padding: 10px;
+    padding-bottom: 5px;
+    margin-top: 45px;
 }
 
-body {
-    display: flex;
-    justify-content: center;
-    font-family: Arial, Helvetica, sans-serif;
-    background-image: linear-gradient(to right, rgb(75, 75, 75), rgb(46, 46, 46));
-}
 
-.box {
-    display: flex;
-    flex-direction: column;
-    color: rgb(248, 248, 248);
-    background-color: rgba(0, 0, 0, 0.6);
-    padding: 15px;
-    border-radius: 15px;
-    width: 100%;
-}
 
-.descricaoBox{
+
+.descricaoBox {
     height: 150px;
-    width: 500px;
+    
 }
 
-.inputRadioBox {
+
+@media(min-width: 576px) {
+    .inputRadioBox {
+        margin-right: 25px;
+        margin-left: 25px;
+        background-color: rgb(54, 54, 54);
+        border-radius: 5px;
+        margin-bottom: 55px;
+        margin-top: 55px;
+        display: flex;
+        padding: 15px;
+        
+    }
+}
+
+@media(max-width: 425px) {
+    .inputRadioBox {
+        background-color: rgb(59, 59, 59);
+        margin-right: 15px;
+        margin-left: 15px;
+        border-radius: 5px;
+        margin-bottom: 55px;
+        margin-top: 25px;
+        display: flex;
+        padding: 15px;
+       
+    }
+
+}
+
+
+.inputRadioBox2 {
     margin-right: 25px;
     background-color: rgb(54, 54, 54);
     margin-left: 18px;
     border-radius: 5px;
     margin-bottom: 55px;
-    margin-top: 25px;
+    margin-top: 55px;
+    display: flex;
+    padding: 15px;
+
+
 }
 
-.inputRadioBox2 {
-    margin-right: 155px;
-    background-color: rgb(54, 54, 54);
-    margin-left: 18px;
-    border-radius: 5px;
-    margin-bottom: 55px;
-    margin-top: 25px;
+.input_div{
+    font-size: 18px;
+    display: table-row;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
 
+
+.input_div input{
+   margin-top: none;
+   cursor: pointer;
+   margin-right: 8px;
+}
+
+.input_div label{
+    cursor: pointer;
 }
 
 legend {
@@ -70,15 +131,8 @@ legend {
     margin: 15px 0 25px 0 !important;
 }
 
-div {
-    padding: 8px;
-    margin-bottom: 20px;
-}
 
-input {
-    height: 22px;
-    margin-top: 23px;
-}
+
 
 label {
     left: 8px;
@@ -86,6 +140,7 @@ label {
 
 option {
     background-color: black;
+
 }
 
 span {
@@ -94,22 +149,30 @@ span {
 
 .inputBox {
     position: relative;
+    margin-left: 10px;
 }
 
 .inputUser {
-    background: none;
+    display: flex;
+    background: rgba(44, 44, 44, 0.315);
     border: none;
     border-bottom: 1px solid white;
     border-right: 1px solid white;
     outline: none;
     color: white;
-    font-size: 15px;
-    width: 100%;
+    font-size: 15px; 
+    width: auto;
     letter-spacing: 2px;
+    border-radius: 3px;
+    margin-top: 8px;
+    height: 28px;
 }
 
+
+
 .inputUser2 {
-    background: none;
+    display: flex;
+    background: rgba(44, 44, 44, 0.315);
     border: none;
     border-bottom: 1px solid white;
     border-right: 1px solid white;
@@ -118,6 +181,10 @@ span {
     font-size: 15px;
     width: 30%;
     letter-spacing: 2px;
+    margin-bottom: 25px;
+    border-radius: 3px;
+    margin-top: 8px;
+    height: 28px;
 }
 
 .inputTable {
@@ -139,7 +206,7 @@ span {
     width: auto;
     margin-right: 40px;
     margin-top: 24px;
-   
+
 }
 
 .inputTable2 {
@@ -162,47 +229,13 @@ span {
 }
 
 
-.labelInput {
-    position: absolute;
-    top: 0px;
-    pointer-events: none;
-    transition: .5px;
-}
-
-.inputUser:focus~.labelInput,
-.inputUser2:focus~.labelInput,
-.inputUser2:valid~.labelInput .inputUser:valid~.labelInput {
-    top: -20px;
-    font-size: 12px;
-    color: dodgerblue;
-}
 
 .title {
     margin: 15px auto;
 }
 
-.radio {
-    flex-direction: row;
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 0px;
-    margin-right: 25px;
-}
 
-.input_div {
-    display: grid;
-}
-
-
-#data_nascimento {
-    border: none;
-    padding: 8px;
-    border-radius: 10px;
-    outline: none;
-    font-size: 15px;
-}
-
-.btnAdicionar{
+.btnAdicionar {
     margin-top: 15px;
     background-color: rgb(1, 146, 13);
     width: auto;
@@ -214,7 +247,7 @@ span {
     color: white;
 }
 
-.btnDeletarUltimo{
+.btnDeletarUltimo {
     background-color: rgb(146, 1, 1);
     width: auto;
     height: 38px;
@@ -243,73 +276,11 @@ input[type="submit" i]:hover {
     background-image: linear-gradient(to right, rgb(196, 27, 12), rgb(90, 20, 220));
 }
 
-#identidade {
-    border: none;
-    padding: 2px;
-    border-radius: 10px;
-    outline: none;
-    font-size: 15px;
-}
 
-#CPF {
-    border: none;
-    padding: 2px;
-    border-radius: 10px;
-    outline: none;
-    font-size: 15px;
-}
-
-#residencia {
-    border: none;
-    padding: 2px;
-    border-radius: 10px;
-    outline: none;
-    font-size: 15px;
-}
-
-#nascimento {
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
-}
 
 input[type="radio" i] {
     margin-top: 17px !important;
 }
 
-input[type="date" i] {
-    display: inherit;
-}
 
-input[type="file" i] {
-    padding: 8px;
-    display: none;
-    background-image: url("add.png");
-    color: white;
-}
 
-.inputFile {
-    cursor: pointer;
-    padding: 15px;
-    border: 2px solid rgb(201, 193, 193);
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    margin-top: 10px;
-}
-
-.labelArquivos {
-    cursor: pointer;
-    width: 100% !important;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    color: #33d4ce;
-    text-align: center;
-}
-
-.imageInput {
-    padding: 5px;
-    width: 50px;
-    margin: auto;
-}
