--- a/frontend/src/component/formCard/styles.css
+++ b/frontend/src/component/formCard/styles.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+
 
 * {
-    font-family: 'Raleway', sans-serif;
-    /* font-family: 'Raleway'; */
+    font-family: 'Roboto', sans-serif;
 }
 
 
@@ -14,15 +14,8 @@ body {
 
 
 
-.descricaoBox {
-    height: 150px;
-
-}
-
-
-
 @media(max-width: 425px) {
-
+    
     .box {
         flex-direction: column;
         color: rgb(248, 248, 248);
@@ -30,7 +23,7 @@ body {
         padding: 12px;
         border-radius: 15px;
     }
-
+    
     .inputDados {
         background: rgba(44, 44, 44, 0.315);
         border-radius: 5px;
@@ -41,19 +34,18 @@ body {
         margin-top: 45px;
         font-size: 13px;
     }
-
+    
     .inputRadioBox {
         background-color: rgba(129, 0, 0, 0.692);
         margin-right: 15px;
-        margin-left: 15px;
         border-radius: 5px;
         margin-bottom: 45px;
         margin-top: 35px;
         display: flex;
         padding: 15px;
-
+        margin-left: 10px;
     }
-
+    
     .inputRadioBox2 {
         margin-right: 25px;
         background-color: rgba(129, 0, 0, 0.692);
@@ -62,8 +54,9 @@ body {
         margin-bottom: 55px;
         display: flex;
         padding: 15px;
+        margin-left: 10px;
     }
-
+    
     .inputUser {
         display: flex;
         background: rgba(255, 255, 255, 0.800);
@@ -80,7 +73,7 @@ body {
         margin-top: 8px;
         height: 28px; 
     }
-
+    
     .inputUser2 {
         display: flex;
         background: rgba(255, 255, 255, 0.800);
@@ -97,7 +90,7 @@ body {
         margin-top: 8px;
         height: 28px;
     }
-
+    
     .inputTable {
         background: rgba(255, 255, 255, 0.800);
         letter-spacing: 2px;
@@ -108,13 +101,12 @@ body {
         outline: none;
         color: rgb(0, 0, 0);
         font-size: 15px;
-        max-width: 160px;
+        width: 95%;
         height: 28px;
         margin-right: 10px;
         margin-bottom: 10px;
-        font-weight: 700;
     }
-
+    
     .inputTable2 {
         background: rgba(255, 255, 255, 0.800);
         border: none;
@@ -130,33 +122,32 @@ body {
         float: right;
         margin-right: 10px;
         margin-bottom: 10px;
-        font-weight: 700;
     }
-
+    
     .tdRemoveBtn {
         width: fit-content;
         height: fit-content;
         background: none;
         border: none;
     }
-
+    
     .tdRemoveBtn img {
         display: block;
         width: 28px;
         margin-bottom: 10px;
     }
-
+    
     .text-center {
         font-size: 16px;
         font-weight: 500;
         text-align: left;
     }
-
+    
     .descricaoContainer{
         margin-top: 25px;
         margin-right: 40px;
     }
-
+    
     .inputTable3{
         background: rgba(255, 255, 255, 0.8);
         letter-spacing: 2px;
@@ -171,9 +162,8 @@ body {
         height: 28px;
         margin-right: 10px;
         margin-bottom: 10px;
-        font-weight: 700;
     }
-
+    
     .descricaoBox{
         display: flex;
         background: rgba(255, 255, 255, 0.800);
@@ -184,7 +174,6 @@ body {
         color: rgb(0, 0, 0);
         font-size: 15px;
         width: 100%;
-        font-weight: 700;
         margin-right: 10px;
         letter-spacing: 2px;
         border-radius: 3px;
@@ -192,7 +181,7 @@ body {
         height: 100px;
         margin-bottom: 50px;
     }
-
+    
 
 }
 
@@ -252,14 +241,16 @@ option {
 .btnAdicionar {
     margin-top: 15px;
     margin-bottom: 50px;
-    background-color: rgb(1, 146, 13);
+    background-color: rgba(0, 201, 33, 0.815);
+    border: none;
     width: auto;
     height: 38px;
     border-radius: 5px;
     margin-right: 30px;
-    font-weight: 500;
-    font-size: 20px;
-    color: white;
+    font-weight: 700;
+    font-size: 17px;
+    color: rgb(0, 0, 0);
+    padding: 8px;
 }
 
 
