--- a/frontend/src/component/formCard/styles.css
+++ b/frontend/src/component/formCard/styles.css
@@ -8,20 +8,16 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-image: linear-gradient(to right, rgb(75, 75, 75), rgb(46, 46, 46));
-    border-radius: 15px;
+    background-image: linear-gradient(to right, rgb(0, 0, 0), rgb(46, 46, 46));
 }
 
 
-
-@media(max-width: 425px) {
     
     .box {
         flex-direction: column;
         color: rgb(248, 248, 248);
         background-color: rgba(0, 0, 0, 0.6);
-        padding: 12px;
-        border-radius: 15px;
+        
     }
     
     .inputDados {
@@ -71,7 +67,8 @@ body {
         letter-spacing: 2px;
         border-radius: 3px;
         margin-top: 8px;
-        height: 28px; 
+        height: 28px;
+         margin-bottom: 20px;
     }
     
     .inputUser2 {
@@ -146,6 +143,7 @@ body {
     .descricaoContainer{
         margin-top: 25px;
         margin-right: 40px;
+        margin-left: 10px;
     }
     
     .inputTable3{
@@ -162,8 +160,13 @@ body {
         height: 28px;
         margin-right: 10px;
         margin-bottom: 10px;
+        margin-left: 5px;
     }
     
+    .descricaoLabel{
+        margin-top: 10px;
+    }
+
     .descricaoBox{
         display: flex;
         background: rgba(255, 255, 255, 0.800);
@@ -182,12 +185,6 @@ body {
         margin-bottom: 50px;
     }
     
-
-}
-
-@media(min-width: 425px) {}
-
-
 
 .input_div {
     font-size: 15px;
