--- a/frontend/src/component/formCard/styles.css
+++ b/frontend/src/component/formCard/styles.css
@@ -67,7 +67,7 @@ body {
         letter-spacing: 2px;
         border-radius: 3px;
         margin-top: 8px;
-        height: 28px;
+        height: 30px;
          margin-bottom: 20px;
     }
     
@@ -209,8 +209,8 @@ legend {
     border: 1px solid dodgerblue;
     padding: 15px 25px;
     text-align: center;
-    background-color: dodgerblue;
-    border-radius: 8px;
+    background-image: linear-gradient(to right, rgb(0, 151, 238), rgb(99, 175, 219));
+    border-radius: 5px;
     margin: 15px 0 25px 0 !important;
 }
 
@@ -238,13 +238,13 @@ option {
 .btnAdicionar {
     margin-top: 15px;
     margin-bottom: 50px;
-    background-color: rgba(0, 201, 33, 0.815);
+    background-image: linear-gradient(to right, rgb(0, 180, 15), rgba(15, 175, 0, 0.719));
     border: none;
     width: auto;
     height: 38px;
     border-radius: 5px;
     margin-right: 30px;
-    font-weight: 700;
+    
     font-size: 17px;
     color: rgb(0, 0, 0);
     padding: 8px;
