--- a/frontend/src/component/formCard/styles.css
+++ b/frontend/src/component/formCard/styles.css
@@ -20,6 +20,14 @@ body {
 
 }
 
+input:disabled {
+    background: rgb(178, 199, 231);
+  }
+
+select:disabled  {
+    background: rgb(178, 199, 231);
+}  
+
 .inputDados {
     background: rgba(44, 44, 44, 0.315);
     border-radius: 5px;
@@ -126,6 +134,7 @@ body {
     height: fit-content;
     background: none;
     border: none;
+    cursor: pointer;
 }
 
 .tdRemoveBtn img {
@@ -244,7 +253,7 @@ option {
     height: 38px;
     border-radius: 5px;
     margin-right: 30px;
-
+    cursor: pointer;
     font-size: 17px;
     color: rgb(0, 0, 0);
     padding: 8px;
