Ajuste no frontend: modificações visuais e preparando para receber rotas. Foi criado tambem pagina de login.

--- a/frontend/src/component/formCard/styles.css
+++ b/frontend/src/component/formCard/styles.css
@@ -8,13 +8,19 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-image: radial-gradient( rgb(22, 24, 22), rgb(0, 0, 0));
     flex-direction: column;
     color: rgb(248, 248, 248);
+    background-image: radial-gradient(rgb(255, 255, 255), rgba(0, 0, 0, 0.479));
 }
 
+.cardContainter {
+    background-image: radial-gradient(rgb(0, 17, 5), rgb(0, 0, 0));
+    border-radius: 10px;
+}
 
-input:disabled, select:disabled, textarea:disabled {
+input:disabled,
+select:disabled,
+textarea:disabled {
     background: rgb(178, 199, 231);
 }
 
@@ -33,7 +39,7 @@ input:disabled, select:disabled, textarea:disabled {
 }
 
 .inputRadioBox {
-    background-image: radial-gradient( rgba(95, 6, 6, 0.726), rgba(165, 0, 0, 0.541));
+    background-image: radial-gradient(rgba(95, 6, 6, 0.726), rgba(165, 0, 0, 0.541));
     border-radius: 5px;
     display: flex;
     padding: 15px;
@@ -41,7 +47,7 @@ input:disabled, select:disabled, textarea:disabled {
     margin-bottom: 45px;
     margin-left: 20px;
     margin-right: 20px;
-    
+
 }
 
 
@@ -198,16 +204,8 @@ input:disabled, select:disabled, textarea:disabled {
     cursor: pointer;
 }
 
-legend {
-    border: 1px solid rgb(255, 255, 255);
-    padding: 15px 25px;
-    text-align: center;
-    background-image: linear-gradient(to right, rgb(0, 127, 201), rgb(0, 147, 233));
-    border-radius: 5px;
-    margin: 15px 0 25px 0 !important;
-}
 
-label {
+.labelInput {
     left: 8px;
 }
 
@@ -224,8 +222,14 @@ option {
 
 
 .title {
-    margin: 15px auto;
+    border: 1px solid rgb(255, 255, 255);
+    padding: 15px 25px;
+    text-align: center;
+    background-image: linear-gradient(to right, rgb(0, 127, 201), rgb(0, 147, 233));
+    border-radius: 5px;
+    margin: 15px 10px 25px 10px !important;
 }
+
 
 
 .btnAdicionar {
@@ -244,11 +248,9 @@ option {
     padding: 8px;
 }
 
-
-
-input[type="submit" i] {
+.btnEnviar {
     background-image: linear-gradient(to right, rgb(0, 102, 255), rgb(0, 51, 218));
-    width: 100%;
+    width: 85%;
     border: none;
     padding: 15px;
     color: white;
@@ -257,7 +259,7 @@ input[type="submit" i] {
     border-radius: 10px;
     height: 20% !important;
     align-items: center;
-    margin: -16px 0 5px 0;
+    margin: 3px 10px 20px 22px;
 }
 
 
