--- a/frontend/src/component/header/styles.css
+++ b/frontend/src/component/header/styles.css
@@ -4,6 +4,7 @@ header {
     display: flex;
     background: linear-gradient(180deg, #490000 0%, #9e0000 100%);
     justify-content: center;
+    border-radius: 10px 10px 0px 0px;
 }
 
 .headerContainer img{
